WS-2019.1 <mmcdermid@uklmmcdrmid.local Update JavaScript.xml

--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -83,7 +83,7 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="r" value="import React, {Component} from 'react';" description="react component" toReformat="false" toShortenFQNames="true">
+  <template name="r" value="import React from 'react';" description="react component" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="TypeScript" value="true" />
