--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -153,4 +153,9 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
+  <template name="ed" value="export default $END$;" description="export default" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
