--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -153,7 +153,7 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="ed" value="export default $END$;" description="export default" toReformat="false" toShortenFQNames="true">
+  <template name="ed" value="export default $END$;" shortcut="SPACE" description="export default" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
