WS-2020.2 <markmcdermid@mark-mbp-2.local Update JavaScript.xml

--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -158,4 +158,16 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="sc" value="import styled from 'styled-components';" description="styled components" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
+  <template name="css" value="import { css } from 'styled-components';" description="css from styled components" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="TypeScript" value="true" />
+    </context>
+  </template>
 </templateSet>
