--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -89,10 +89,9 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="rc" value="import React, {Component} from 'react';&#10;&#10;interface $interface$Props{&#10;  $something$&#10;}&#10;&#10;export class $name$ extends Component&lt;$interface$, {}&gt; {&#10;  public render() {&#10;    return (&#10;    $END$&#10;    );&#10;  }&#10;}" description="react and class" toReformat="false" toShortenFQNames="true">
+  <template name="rc" value="import React, {Component} from 'react';&#10;&#10;interface Props{&#10;  $proptypes$&#10;}&#10;&#10;const $name$: React.FC&lt;Props&gt; = (props) =&gt; {&#10;  return (&#10;    $END$&#10;  );&#10;};&#10;&#10;export default $name$;" description="react and class" toReformat="false" toShortenFQNames="true">
+    <variable name="proptypes" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="interface" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="something" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
