--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -96,7 +96,7 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
-  <template name="logg" value="console.log('$var2$', $var2$);" description="Big Console Log * 2" toReformat="false" toShortenFQNames="true">
+  <template name="logg" value="console.log('!!$var2$', $var2$);" description="Big Console Log * 2" toReformat="false" toShortenFQNames="true">
     <variable name="var2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="JAVA_SCRIPT" value="true" />
