--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -89,7 +89,7 @@
       <option name="TypeScript" value="true" />
     </context>
   </template>
-  <template name="rc" value="import React, {Component} from 'react';&#10;&#10;interface Props{&#10;  $proptypes$&#10;}&#10;&#10;const $name$: React.FC&lt;Props&gt; = (props) =&gt; {&#10;  return (&#10;    $END$&#10;  );&#10;};&#10;&#10;export default $name$;" description="react and class" toReformat="false" toShortenFQNames="true">
+  <template name="rfc" value="import React from 'react';&#10;&#10;interface Props {&#10;  $proptypes$&#10;}&#10;&#10;export const $name$: React.FC&lt;Props&gt; = (props) =&gt; {&#10;  return (&#10;    $END$&#10;  );&#10;};" description="rfc" toReformat="false" toShortenFQNames="true">
     <variable name="proptypes" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -166,6 +166,12 @@
     <context>
       <option name="JAVA_SCRIPT" value="true" />
       <option name="TypeScript" value="true" />
+    </context>
+  </template>
+  <template name="rfcn" value="import React from 'react';&#10;&#10;export const $name$: React.FC = ({ children })) =&gt; {&#10;  return (&#10;    $END$&#10;  );&#10;};" description="rfc no props" toReformat="false" toShortenFQNames="true">
+    <variable name="name" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
 </templateSet>
