--- a/templates/Zen HTML.xml
+++ b/templates/Zen HTML.xml
@@ -7,4 +7,8 @@
     <variable name="key" expression="" defaultValue="" alwaysStopAt="true" />
     <context />
   </template>
+  <template name="div" value="&lt;div&gt;$END$&lt;/div&gt;" description="&lt;div&gt;...&lt;/div&gt;" toReformat="false" toShortenFQNames="true">
+    <variable name="className" expression="" defaultValue="" alwaysStopAt="true" />
+    <context />
+  </template>
 </templateSet>
